# clean_detr

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: train.yaml
detr/: data.py  loss.py  lr_scheduler.py  matcher.py
detr/data/: bboxes.py  datasets.py  plot.py  transforms.py
detr/models/: backbone.py  convert_state_dict.py  detr.py  misc.py  position_embedding.py  transformer.py  zoo.py
scripts/: train.py
