[project]
name = "clean-detr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxtyping>=0.2.34",
    "tensordict>=0.6.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pre-commit>=4.0.1",
    "requests>=2.32.3",
]

[tool.setuptools]
packages = ["detr"]


[tool.ruff]
extend-include = ["*.ipynb"]

line-length = 120

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
ignore = ["F722"] # Necessary to use jaxtyping
