[project]
name = "clean-detr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "jaxtyping>=0.2.34",
    "pycocotools>=2.0.8",
    "scipy>=1.14.1",
    "tensordict>=0.6.1",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
    "wandb>=0.18.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pre-commit>=4.0.1",
    "requests>=2.32.3",
]

[tool.setuptools]
packages = ["detr"]


[tool.ruff]
extend-include = ["*.ipynb"]

line-length = 120

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
ignore = ["F722"] # Necessary to use jaxtyping
